--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
         "@testing-library/user-event": "^7.2.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-scripts": "3.4.1"
+        "react-scripts": "3.4.1",
+        "uuid": "^8.3.0"
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "CI= react-scripts build",
+        "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
